<resources>
    <string name="app_name">毕业设计管理系统</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="type">用户类型</string>
    <string name="name">用户名</string>
    <string name="password">密   码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="reset">重置</string>
    <string name="toast1">请输入用户名</string>
    <string name="toast2">请输入密码</string>
    <string name="toast3">哈尔滨工业大学（威海） </string>
</resources>
